--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -23,7 +23,7 @@
           </div>
           <div class="form-group">
             
-            <input type="hidden">
+            <input type="hidden" formControlName="OrderDate">
           </div>
 
           <div class="form-group">
@@ -45,7 +45,7 @@
           <tr *ngFor="let order of orderList">
             <td>{{this.order.ClientName}}</td>
             <td>{{this.order.ItemName}}</td>
-            <td>{{this.order.Quantity}}</td>
+            <td>{{this.order.ItemQuantity}}</td>
             
             <td>{{this.OrderDate|date}}</td>
             <!-- <td>{{this.order}}</td>
